scroll button added

--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 </head>
 <body>
     <div class="container">
-        <button class="btn-scroll"><a href="#"><img src="images/icons8-chevron-up-30.png" alt=""></a></button>
+        <button class="btn-scroll" id="scroll-btn"><a href="#"><img src="images/icons8-chevron-up-30.png" alt=""></a></button>
         <div class="header-photo">
             <img src="images/sm-size-removebg-preview.png" alt="" class="personal-photo">
         </div>
-        <header>
+        <header id="home">
             <nav>
                 <div class="branding">Ali Hamza</div>
                 <ul class="navbar">
+                    <li class="nav-item"><a href="#home" class="nav-link">Home</a></li>
                     <li class="nav-item"><a href="#my-skills" class="nav-link">Skills</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">About</a></li>
                     <li class="nav-item"><a href="#hero-section" class="nav-link">Projects</a></li>
                     <li class="nav-item"><a href="#contact-section" class="nav-link">Contact</a></li>
                 </ul>
@@ -114,8 +114,8 @@
             <a href=""><img src="images/instagram.png" alt="" class="f-image"></a>
             <a href=""><img src="images/linkedin.png" alt="" class="f-image"></a>
             <a href=""><img src="images/email.png" alt="" class="f-image"></a>
-            
         </div>
         <p class="f-para">Copyrights &copy; 2023 Made by Ali Hamza</p>
+        <script src="script.js"></script>
 </body>
 </html>
