hamburger menu added

--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
                     <li class="nav-item"><a href="#hero-section" class="nav-link">Projects</a></li>
                     <li class="nav-item"><a href="#contact-section" class="nav-link">Contact</a></li>
                 </ul>
+                <div class="hamburger">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                </span></div>
             </nav>
             <div class="wrapper">
                 <div class="header-description">
@@ -31,7 +36,7 @@
                         I'm a Web Developer. Converting enchanting web designs into real websites is my passion.
                     </p>
                     <div class="btns">
-                        <button class="projects-btn"><a href="#hero-section" class="projects-btn-link">Projects</a></button>
+                        <button class="projects-btn"><a href="Invoice.pdf" class="projects-btn-link">Projects</a></button>
                         <button class="repo-btn"><a href="https://github.com/AliHamza8" class="repo-link">Github</a></button>
                     </div>
                     
