--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
     <title>Ali Hamza</title>
 </head>
 <body>
     <div class="container">
-        <button class="btn-scroll" id="scroll-btn"><a href="#"><img src="images/icons8-chevron-up-30.png" alt=""></a></button>
-        <div class="header-photo">
-            <img src="images/sm-size-removebg-preview.png" alt="" class="personal-photo">
-        </div>
+        <button class="btn-scroll" id="scroll-btn"><a href="#home"><img src="images/icons8-chevron-up-30.png" alt=""></a></button>
+        <!-- <div class="header-photo">
+            <img src="images/result.png" alt="" class="personal-photo">
+        </div> -->
         <header id="home">
             <nav>
                 <div class="branding">Ali Hamza</div>
@@ -36,10 +37,13 @@
                         I'm a Web Developer. Converting enchanting web designs into real websites is my passion.
                     </p>
                     <div class="btns">
-                        <button class="projects-btn"><a href="Invoice.pdf" class="projects-btn-link">Projects</a></button>
-                        <button class="repo-btn"><a href="https://github.com/AliHamza8" class="repo-link">Github</a></button>
+                        <button class="projects-btn btn1"><a href="Invoice.pdf" class="projects-btn-link">Resume<i class="fa-solid fa-download ico"></i></a></button>
+                        <button class="repo-btn btn1"><a href="https://github.com/AliHamza8" class="repo-link">Github<i class="fa-brands fa-square-github ico"></i></a></button>
                     </div>
                     
+                </div>
+                <div class="header-photo">
+                    <img src="images/personal-image-cropped.png" alt="" class="personal-photo">
                 </div>
                 
             </div>
