--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <div class="footer" id="contact-section">
             <a href="https://www.instagram.com/hamza_.rehar/"><img src="images/instagram.png" alt="" class="f-image"></a>
             <a href=""><img src="images/linkedin.png" alt="" class="f-image"></a>
-            <a href="mailto:https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox"><img src="images/email.png" alt="" class="f-image"></a>
+            <a href="mailto:https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox?compose=CllgCJfprrTWnzWCSfPWTwHpQwPLjpRkDpscjJtjbsgFbQmzmvFplqSztftQRtMCMVWNHLlcxdq"><img src="images/email.png" alt="" class="f-image"></a>
         </div>
         <p class="f-para">Copyrights &copy; 2023 Made by Ali Hamza</p>
         <script src="script.js"></script>
