added code for websites

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     </p>
                     <div class="project-1-btns">
                         <button class="project-1-web-btn p-1-btn"><a href="https://myelectronics.netlify.app" class="project-1-web-link p-1-btn-link">View Project</a></button>
-                        <button class="project-1-code-btn p-1-btn"><a href="" class="project-1-code-link p-1-btn-link">View Code</a></button>
+                        <button class="project-1-code-btn p-1-btn"><a href="https://github.com/AliHamza8/emaan-electrons" class="project-1-code-link p-1-btn-link">View Code</a></button>
                     </div>
                 </div>
                 <img src="images/screencapture-emaan.png" alt="" class="project-1-image p-image">
@@ -106,7 +106,7 @@
                     </p>
                     <div class="project-1-btns">
                         <button class="project-1-web-btn p-1-btn"><a href="https://trendingwebsite.netlify.app" class="project-1-web-link p-1-btn-link">View Project</a></button>
-                        <button class="project-1-code-btn p-1-btn"><a href="https://github.com/AliHamza8/My-Resume" class="project-1-code-link p-1-btn-link">View Code</a></button>
+                        <button class="project-1-code-btn p-1-btn"><a href="https://github.com/AliHamza8/Brand-Website" class="project-1-code-link p-1-btn-link">View Code</a></button>
                     </div>
                 </div>
                 <img src="images/trending-webpage.png" alt="" class="project-2-image p-image">
