linkedIn link added

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="shortcut icon" href="images/icons8-portfolio-64.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <title>Ali Hamza</title>
 </head>
@@ -116,7 +117,7 @@
     </div>
         <div class="footer" id="contact-section">
             <a href="https://www.instagram.com/hamza_.rehar/"><img src="images/instagram.png" alt="" class="f-image"></a>
-            <a href=""><img src="images/linkedin.png" alt="" class="f-image"></a>
+            <a href="https://www.linkedin.com/in/ali-hamza-a8865626a/"><img src="images/linkedin.png" alt="" class="f-image"></a>
             <a href="mailto:https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox?compose=CllgCJfprrTWnzWCSfPWTwHpQwPLjpRkDpscjJtjbsgFbQmzmvFplqSztftQRtMCMVWNHLlcxdq"><img src="images/email.png" alt="" class="f-image"></a>
         </div>
         <p class="f-para">Copyrights &copy; 2023 Made by Ali Hamza</p>
